# rust-gpu

./: rust-toolchain.toml
crates/rustc_codegen_spirv/: Cargo.toml  build.rs
crates/rustc_codegen_spirv-types/: Cargo.toml
crates/spirv-builder/: Cargo.toml  README.md
crates/spirv-builder/src/: lib.rs
crates/spirv-std/: Cargo.toml
crates/spirv-std/macros/: Cargo.toml
crates/spirv-std/shared/: Cargo.toml
examples/multibuilder/: Cargo.toml
examples/runners/ash/: Cargo.toml
examples/runners/cpu/: Cargo.toml
examples/runners/wgpu/: Cargo.toml
examples/runners/wgpu/builder/: Cargo.toml
examples/shaders/compute-shader/: Cargo.toml
examples/shaders/mouse-shader/: Cargo.toml
examples/shaders/reduce/: Cargo.toml
examples/shaders/shared/: Cargo.toml
examples/shaders/simplest-shader/: Cargo.toml
examples/shaders/sky-shader/: Cargo.toml
tests/: Cargo.toml
tests/deps-helper/: Cargo.toml
tests/src/: main.rs
