[package]
name = "compiletests"
version = "0.0.0"
publish = false

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["rustc_codegen_spirv/use-installed-tools"]
use-compiled-tools = ["rustc_codegen_spirv/use-compiled-tools"]

[dependencies]
compiletest = { version = "0.9.0", package = "compiletest_rs" }
rustc_codegen_spirv.path = "../crates/rustc_codegen_spirv"
structopt = "0.3.21"
