[package]
name = "spirv-std"
description = "Standard functions and types for SPIR-V"
version = "0.7.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"

[dependencies]
spirv-std-types.path = "../spirv-std/shared"
spirv-std-macros.path = "../spirv-std/macros"
bitflags = "1.2.1"
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
glam = { version = "0.22", default-features = false, features = ["libm"] }

[features]
default = []
