[package]
name = "multibuilder"
version = "0.0.0"
publish = false

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
spirv-builder.path = "../../crates/spirv-builder"
spirv-std.path = "../../crates/spirv-std"
