[package]
name = "spirv-std-macros"
description = "Macros for spirv-std"
version = "0.7.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"


[lib]
proc-macro = true

[dependencies]
spirv-std-types.path = "../shared"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = { version = "1.0.58", features = ["full", "visit-mut"] }
