[package]
name = "shared"
version = "0.0.0"
publish = false
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/rust-gpu"

[dependencies]

spirv-builder.path = "../../../crates/spirv-builder"
bytemuck = { version = "1.6.3", features = ["derive"] }
